# FTP_File_Transfer_service

./: LICENSE  README.md  pyproject.toml  settings.json
src/: main.py
src/backend/: __init__.py
src/backend/api/: ftp_client.py
src/backend/configurations/: config.py  settings.py
src/backend/models/: user.py
src/backend/monitoring/: server_status.py
src/backend/routes/: ftp.py  home.py  login.py  modbus.py  status.py
src/backend/services/: __init__.py  ftp_service.py
src/frontend/static/css/: styles.css
src/frontend/templates/: base.html  ftp.html  home.html  login.html  modbus.html
user_settings/: settings.json
