[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftp-file-transfer-service"
version = "0.1.0"
description = "Web-based FTP file transfer service with monitoring and control"
readme = "README.md"
license = "MIT"
authors = [{name = "Nico Dieckmann", email = "nico.dieckmann@gmx.de"}]
requires-python = ">=3.11"

# Basis Abhängigkeiten
dependencies = [
    "watchdog == 3.0.0",
    "Flask == 3.0.0",
    "speedtest-cli == 2.1.3",
    "paramiko == 3.5.0"]

[project.optional-dependencies]
# Entwicklungsabhängigkeiten
dev = [
    "black >= 22.0",
    "flake8 >= 3.9",
    "pytest >= 8.0"]

[project.scripts]
file-transfer-service = "src.main:main"


[tool.hatch.build.targets.wheel]
packages = ["src"]

